--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
-  <!--<link href="./styles.css" rel="stylesheet" />-->
+  <link href="./styles.css" rel="stylesheet" />
 </head>
 
 <body>
   
-<div id="map" style= 'width: 1300px; height:550px;'></div>
-    <div>
+<div id="map"> </div>
+    <div class="map-overlay"> 
         <button style="font-size: 2em" onclick="move()">
             Show stops between MIT and Harvard
         </button>
     </div>
-   <div>
+   <div class= "map-overlay1"> 
         <button style="font-size: 2em" onclick="moveZones()">
             Show stops between MIT and Northeastern University
         </button>
